--- a/public/signup.html
+++ b/public/signup.html
@@ -28,6 +28,15 @@
           <h2>Sign Up Form</h2>
           <form class="signup">
             <div class="form-group">
+              <label for="exampleInputName1">Name</label>
+              <input
+                type="name"
+                class="form-control"
+                id="name-input"
+                placeholder="Name"
+              />
+            </div>
+            <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
               <input
                 type="email"
