--- a/public/signup.html
+++ b/public/signup.html
@@ -17,17 +17,31 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header"></div>
+    <nav>
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">Logo</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="login.html">login</a></li>
+          <li><a href="members.html">members</a></li>
+          <li><a href="signup.html">sign</a></li>
+        </ul>
       </div>
     </nav>
+  
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <h2>Sign Up Form</h2>
           <form class="signup">
             <div class="form-group">
+              <label for="exampleInputName1">Email address</label>
+              <input
+                type="name"
+                class="form-control"
+                id="name-input"
+                placeholder="Name"
+              />
+            </div>
               <label for="exampleInputEmail1">Email address</label>
               <input
                 type="email"
