--- a/public/signup.html
+++ b/public/signup.html
@@ -25,7 +25,7 @@
   <body>
     <nav>
       <div class="nav-wrapper">
-        <a href="#!" class="brand-logo center"><img src="/img/final-tp-poops.png" alt="logoTP" width="100" height="100"></a>
+        <a href="#!" class="brand-logo center"><img src="/images/final-tp-poops.png" alt="logoTP" width="100" height="100"></a>
         <ul class="left hide-on-med-and-down">
           <li><a href="login.html">Login</a></li>
           <li><a href="members.html">Members</a></li>
