--- a/public/signup.html
+++ b/public/signup.html
@@ -87,7 +87,17 @@
         </div>
       </div>
     </div>
-    <footer>&copy; 2020 | Made with ❤️️ by Michelle McConville, Paul LaBounty, Kobe Hill, Kendra Hallam</footer>
+    <footer></footer>
+
+    <footer class="page-footer">
+      <div class="container">
+      <div class="row">
+      <div class="col-md-3">
+          &copy; 2020 | Made with ❤️️ by Michelle McConville, Paul LaBounty, Kobe Hill, Kendra Hallam
+      </div>
+      </div>
+      </div>
+    </footer>
 
     <script type="text/javascript" src="js/signup.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
