--- a/public/signup.html
+++ b/public/signup.html
@@ -87,7 +87,7 @@
         </div>
       </div>
     </div>
-    <footer>&copy; 2020 | Made with ❤️️ by Michelle McConville, Paul LaBounty, Kobe Hill, Kendra Hallam</footer>
+    <footer>&copy; 2020 | Made with ❤️️ by | Michelle McConville | Paul LaBounty | Kobe Hill | Kendra Hallam |</footer>
 
     <script type="text/javascript" src="js/signup.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
