--- a/public/members.html
+++ b/public/members.html
@@ -10,14 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" /> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=El+Messiri:wght@400;500;600&family=Kurale&family=Marcellus&family=Orbitron:wght@400;500;600;700;800;900&family=Rancho&display=swap" />
-    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 ​
   <body>
 ​
     <nav>
       <div class="nav-wrapper">
-        <a href="#!" class="brand-logo center"><img src="./images/final-tp-poops.png" alt="logoTP" width="125" height="125"></a>
+        <a href="#!" class="brand-logo center"><img src="./img/final-tp-poops.png" alt="logoTP" width="125" height="125"></a>
         <ul class="left hide-on-med-and-down">
           <li><a href="login.html">Login</a></li>
           <li class="active"><a href="signup.html">Sign Up</a></li>
