--- a/public/login.html
+++ b/public/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Test Login</title>
+    <title>Login</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon"
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" /> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=El+Messiri:wght@400;500;600&family=Kurale&family=Marcellus&family=Orbitron:wght@400;500;600;700;800;900&family=Rancho&display=swap" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body>
@@ -24,7 +25,7 @@
           <li><a href="members.html">Home</a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
-          <li><a href="TBD.html">Logout</a></li>
+          <li><a href="login.html">Logout</a></li>
         </ul>
       </div>
     </nav>
@@ -55,7 +56,7 @@
     <div class="push"></div>
     <footer>&copy; 2020 | Made with ❤️️ by | Michelle McConville | Paul LaBounty | Kobe Hill | Kendra Hallam</footer>
 
-    <script src="js/login.js" type="text/javascript"></script>
+    <script src="/js/login.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   </body>
