--- a/public/signup.html
+++ b/public/signup.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=El+Messiri:wght@400;500;600&family=Kurale&family=Marcellus&family=Orbitron:wght@400;500;600;700;800;900&family=Rancho&display=swap" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body>
@@ -19,9 +20,11 @@
         <a href="#!" class="brand-logo center"><img src="./img/final-tp-poops.png" alt="logoTP" width="125" height="125"></a>
         <ul class="left hide-on-med-and-down">
           <li><a href="login.html">Login</a></li>
-          <li><a href="members.html">Members</a></li>
-          <li class="active"><a href="signup.html">Sign-up</a></li>
-          <li><a href="">Logout</a></li>
+          <li class="active"><a href="signup.html">Sign Up</a></li>
+          <li><a href="members.html">Home</a></li>
+        </ul>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="login.html">Logout</a></li>
         </ul>
       </div>
     </nav>
@@ -81,7 +84,7 @@
 
     <footer>&copy; 2020 | Made with ❤️️ by | Michelle McConville | Paul LaBounty | Kobe Hill | Kendra Hallam</footer>
 
-    <script type="text/javascript" src="js/signup.js"></script>
+    <script type="text/javascript" src="/js/signup.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   </body>
